--- a/medsafe-frontend/src/app/components/referti-edit/referti-edit.component.html
+++ b/medsafe-frontend/src/app/components/referti-edit/referti-edit.component.html
@@ -195,7 +195,7 @@
             class="required">*</span> <small>(max 320 caratteri)</small></label>
         <textarea id="editTestoReferto" [(ngModel)]="editData.testoReferto" name="testoReferto" class="form-control"
           rows="5" maxlength="320" placeholder="Inserisci il testo del referto..." required></textarea>
-        <small class="char-counter">{{ editData.testoReferto?.length || 0 }}/320</small>
+        <small class="char-counter">{{ editData.testoReferto.length || 0 }}/320</small>
       </div>
 
       <div class="form-group full-width">
@@ -203,7 +203,7 @@
           <small>(max 500 caratteri)</small></label>
         <textarea id="editConclusioni" [(ngModel)]="editData.conclusioni" name="conclusioni" class="form-control"
           rows="4" maxlength="500" placeholder="Inserisci le conclusioni..." required></textarea>
-        <small class="char-counter">{{ editData.conclusioni?.length || 0 }}/500</small>
+        <small class="char-counter">{{ editData.conclusioni.length || 0 }}/500</small>
       </div>
 
       <div class="form-group full-width">
